# server-init

./: .gitignore  Cargo.toml  flake.nix
.cargo/: config.toml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
