[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
chrono = "0.4.38"
clap = { version = "4.5.4", features = [ "derive" ] }
cuid2 = "0.1.2"
directories = "5.0.1"
git2 = "0.18.3"
rnix = "0.11.0"
sqlite = "0.36.0"
tokio = { version = "1.37.0", features = [ "full" ] }
